# carenage

./: .gitlab-ci.yml  README.md  build.sh  carenage.sql  docker-compose.yml
carenage/: .dockerignore  .env.test  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml
carenage/api/: Cargo.toml
carenage/api/src/: api.rs  main.rs  utils.rs
carenage/api/tests/: api.rs
carenage/carenage-cli/: Cargo.toml
carenage/carenage-cli/src/: cli.rs  main.rs
carenage/carenaged/: Cargo.toml
carenage/carenaged/src/: carenaged.rs  lib.rs  main.rs
carenage/carenaged/tests/: carenaged.rs
carenage/carenaged/tests/common/: mod.rs
carenage/cli/: Cargo.toml
carenage/cli/src/: main.rs
carenage/database/: Cargo.toml
carenage/database/fixtures/: dimensions.sql  events.sql  metrics.sql
carenage/database/src/: boagent.rs  ci.rs  database.rs  event.rs  lib.rs  metrics.rs  tables.rs  timestamp.rs
carenage/database/tests/: boagent.rs  database.rs
carenage/database/tests/common/: mod.rs
carenage/mocks/: boagent_response.json  process6042.json  process_embedded_impacts.json  query_boagent_response_before_process_embedded_impacts.json
carenage/packaging/debian/: changelog  control  copyright  rules
carenage/packaging/debian/DEBIAN/: control  copyright
carenage/src/: cli.rs  database.rs  lib.rs  main.rs  timestamp.rs
carenage/tests/: cli.rs
dashboard/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
dashboard/.husky/: pre-commit
dashboard/src/: app.html  hooks.client.ts  hooks.server.ts  pipeline.svelte  run.svelte
dashboard/src/lib/: create-graph.svelte.ts  fetchCarenage.ts  run.svelte  utils.ts
dashboard/src/lib/components/: header.svelte  pipeline.svelte  project.svelte  run.svelte
dashboard/src/lib/types/: carenage.d.ts  enums.ts
dashboard/src/mocks/: handlers.ts
dashboard/src/routes/: +layout.server.ts  +layout.svelte
dashboard/src/routes/metrics/: +page.svelte
dashboard/src/routes/pipelines/[id]/: +page.server.ts  +page.svelte
dashboard/src/routes/projects/[id]/: +page.server.ts  +page.svelte
dashboard/src/routes/runs/[id]/: +page.server.ts  +page.svelte
dashboard/src/tests/: fetch.test.ts  header.test.ts  pipeline.test.ts  project.test.ts  run.test.ts  utils.test.ts
dashboard/src/tests/e2e/: pipeline.test.ts  project.test.ts  run.test.ts
dashboard/src/tests/fixtures/: pipeline.json  project_metadata.json  run.json  runs.json
dashboard/src/types/: carenage.d.ts
dashboard/static/: mockServiceWorker.js
dashboard/static/css/: dygraph.css  global.css
db/: 1_init_carenage.sql  carenage.sql
