[package]
name = "carenage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
mockito = "1.4.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "migrate"] }
