[package]
name = "carenage"
version = "0.1.0"
authors = ["Hubblo <contact@hubblo.org>", "Benjamin Dromard <benjamin@hubblo.org>"]
edition = "2021"
license = "Apache-2.0"
description = "Continuous integration tool to assess the environmental impacts and energy consumption of an application in development."
repository = "https://gitlab.com/hubblo/carenage/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.14"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
dotenv = "0.15.0"
mockito = "1.4.0"
predicates = "3.1.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }
