[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
chrono = "0.4.38"
database = { path = "../database" }
hyper = "1.5.0"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.132"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde"] }
