[package]
name = "carenaged"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version="0.4.38", features=["alloc", "serde"] }
database = { path = "../database" }
dotenv = "0.15.0"
serde_json = "1.0.127"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "migrate" ] }
sysinfo = "0.30.13"
tokio = { version="1.39.2", features=["full"] }
tokio-macros = "2.4.0"
