[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.22"
mockito = "1.4.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = "1.0.204"
serde_json = "1.0.120"
serde_with = "3.11.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }
uuid = "1.10.0"
